dev/test_programs/INVALID/group1/stmt6.go
package main;

func main(){
	var x int = 1;
	else {
		x = 4;
	}
}
